Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22561

Unable to access DBF inside a ZIP archiveConnect engine Zip

    XMLWordPrintable

Details

    Description

      I am unable to get Connect to use a DBF inside a zip archive.

      This fails with "#1105 - Cannot get columns from R_ACTE" :

      CREATE TABLE R_ACTE engine=CONNECT table_type=DBF CHARSET=cp850 file_name="/tmp/CCAMArchiveLatest/CCAM_DBF.zip" zipped=1 option_list="Accept=1,Entry=R_ACTE.dbf";

      As a workaround, unziping the archive in the same location and this would go thru :

      CREATE TABLE R_ACTE engine=CONNECT table_type=DBF CHARSET=cp850 file_name="/tmp/CCAMArchiveLatest/R_ACTE.dbf" option_list="Accept=1";

      File used is :
      https://www.ameli.fr/fileadmin/user_upload/documents/CCAM06300_DBF_PART1.zip

      The same issue happens for any DBF file from the same source. Those files are valid as per any other tools I've used to access them.

      FYI, option Accept=1 is required to workaround another issue on using this kind of DBF.

      Attachments

        Activity

          People

            bertrandop Olivier Bertrand
            bjb Jean-Baptiste BUGEAUD
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 5d
                5d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.